# Intelligent-Robots

./: .env.example  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
app/: layout.tsx
app/(dashboard)/: page.tsx
app/(dashboard)/ai/: page.tsx
app/(dashboard)/companies/: page.tsx
app/(dashboard)/data/: page.tsx
app/(dashboard)/funding/: page.tsx
app/(dashboard)/news/: page.tsx
app/(dashboard)/papers/: page.tsx
app/(dashboard)/pricing/: page.tsx
app/(dashboard)/resources/: page.tsx
app/(login)/: login.tsx
app/actions/: locale.ts
app/api/presence/: route.ts
apps/api/: package.json  tsconfig.build.json  tsconfig.json
apps/api/src/: app.service.ts  main.ts
apps/crawler/: README.md  pyproject.toml
apps/crawler/src/ir_crawler/: __init__.py  main.py
apps/web/: drizzle.config.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/(dashboard)/: page.tsx
apps/web/app/(login)/: login.tsx
apps/web/components/: hot-terms.tsx  language-switcher.tsx  live-presence.tsx  module-card.tsx  news-feature-card.tsx  page-shell.tsx  public-header.tsx  robot-spline-hero.tsx  section-heading.tsx  signal-list.tsx
components/: hot-terms.tsx  language-switcher.tsx  live-presence.tsx  module-card.tsx  news-feature-card.tsx  page-shell.tsx  public-header.tsx  robot-spline-hero.tsx  section-heading.tsx  signal-list.tsx
components/ui/: splite.tsx
docs/superpowers/specs/: 2026-05-01-robotics-intelligence-platform-design.md
lib/data/: robotics.ts
lib/db/: drizzle.ts  schema.ts  seed.ts  setup.ts
(+22 files in other folders)
