[project]
name = "intelligent-robots-crawler"
version = "0.1.0"
description = "Crawler and content processing workers for the Intelligent Robots platform."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "trafilatura>=1.9.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
browser = [
  "playwright>=1.44.0"
]

[project.scripts]
ir-crawler = "ir_crawler.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
